# Visore

./: build  buildfull  buildfull32  buildfull64  dependencies  gitpush  gitsave  supressions  windows-build-32bit.bat  windows-build-64bit.bat
code/: CMakeLists.txt  CMakeLists.txt.user.on2802
code/benchmarker/: CMakeLists.txt
code/benchmarker/headers/: vibenchmarker.h  vibenchmarker2.h  vibenchmarker3.h  vibenchmarker4.h  viinterpolatorbatcher.h  viinterpolatorbenchmarker.h  vinoisebatcher.h  vinoisedetectorbenchmarker.h  vipredictorbenchmarker.h  vistatistician.h
code/benchmarker/sources/: vibenchmarker.cpp  vibenchmarker2.cpp  vibenchmarker3.cpp  vibenchmarker4.cpp  viinterpolatorbatcher.cpp  viinterpolatorbenchmarker.cpp  vinoisebatcher.cpp  vinoisedetectorbenchmarker.cpp  vipredictorbenchmarker.cpp  vistatistician.cpp
code/cmake/: Dependencies.cmake  DetectGPU.cmake  FindFFMPEG.cmake  FindFfmpeg.cmake  FindQt5.cmake  FindQtMobility.cmake  Macros.cmake  Packaging.cmake  PackagingFiles.cmake  Version.cmake
code/cmake/dependencies/: FindFfmpeg.cmake  FindGretl.cmake  FindOpenCL.cmake  FindQt5.cmake
code/common/: CMakeLists.txt
code/common/logos/: logo.icns
code/engine/: CMakeLists.txt
code/engine/sources/: viaudioengine.cpp
code/engine/vialigner/: CMakeLists.txt
code/engine/vialigner/headers/: vialigner.h  vibrutecrossaligner.h  vifouriercrossaligner.h
code/engine/vialigner/sources/: vialigner.cpp  vibrutecrossaligner.cpp  vifouriercrossaligner.cpp
code/engine/viaudiobuffer/: CMakeLists.txt
code/engine/viaudiobuffer/headers/: viaudiobuffer.h  viaudiobufferchunk.h  viaudiobuffermanager.h  viaudiobuffermutex.h  viaudiobufferstream.h  viaudiodata.h  viaudioprocessingchain.h  vibuffer.h  vibufferstream.h  vipcmconverter.h  viprocessor.h  viprocessorlist.h  viprocessormanager.h  vireversebufferstream.h  visignalmanipulator.h
code/engine/viaudiobuffer/sources/: viaudiobuffer.cpp  viaudiobufferchunk.cpp  viaudiobuffermanager.cpp  viaudiobuffermutex.cpp  viaudiobufferstream.cpp  viaudiodata.cpp  vibuffer.cpp  vibufferstream.cpp  vipaudiorocessingchain.cpp  vipcmconverter.cpp  vipcmconverter.cpp.autosave  viprocessor.cpp  viprocessorlist.cpp  viprocessormanager.cpp  vireversebufferstream.cpp  visignalmanipulator.cpp
code/engine/viaudiocodecs/: CMakeLists.txt
code/engine/viaudiocodecs/headers/: viaudiocodecs.h
code/engine/viaudiocodecs/sources/: viaudiocodecs.cpp
code/engine/viaudiocoder/: CMakeLists.txt
code/engine/viaudioconnections/: CMakeLists.txt
code/engine/viaudioencoders/: CMakeLists.txt
code/engine/viaudioengine/: CMakeLists.txt
code/engine/viaudioformats/: CMakeLists.txt
code/engine/viaudioobject/: CMakeLists.txt
code/engine/viaudioplayer/: CMakeLists.txt
code/engine/viaudiorecorder/: CMakeLists.txt
code/engine/viautoregresser/: CMakeLists.txt
code/engine/vicodecs/: CMakeLists.txt
code/engine/vicodecs/headers/: vicodecs.h
code/engine/vicoder/: CMakeLists.txt
code/engine/vicomparer/: CMakeLists.txt
code/engine/vicorrelator/: CMakeLists.txt
code/engine/vieigen/: CMakeLists.txt
code/engine/vifann/: CMakeLists.txt
code/engine/vifouriertransformer/: CMakeLists.txt
code/engine/vifunctions/: CMakeLists.txt
code/engine/vigretl/: CMakeLists.txt
code/engine/viinterpolators/: CMakeLists.txt
code/engine/vimatcher/: CMakeLists.txt
code/engine/vinoisedetector/: CMakeLists.txt
code/engine/vipolynomials/: CMakeLists.txt
code/engine/vipredictors/: CMakeLists.txt
code/engine/viprocessingchain/: CMakeLists.txt
code/engine/viprocessor/: CMakeLists.txt
code/engine/viproject/: CMakeLists.txt
code/engine/visongdetector/: CMakeLists.txt
code/engine/visongidentifier/: CMakeLists.txt
code/engine/vispectrumanalyzer/: CMakeLists.txt
code/engine/viwaveformer/: CMakeLists.txt
code/engine/viwindower/: CMakeLists.txt
code/engine/viwindowfunctions/: CMakeLists.txt
code/essentials/: CMakeLists.txt  viessentials.h
code/essentials/headers/: viarchive.h  viatomicint.h  viaudio.h  viaverager.h  vichunk.h  viclassificationerror.h  vicommon.h  vidifferentiater.h  vierror.h  viessentials.h  vifunctioncall.h  vifunctor.h  viid.h  vijsonresponse.h  vilibrary.h  vilibrarydetector.h  vilibrarymanager.h  vilogger.h  vimanager.h  vimath.h  vimatrix.h  viname.h  vinotifier.h  viobject.h  vipointer.h  vipowercalculator.h  virandomgenerator.h  virange.h  viscaler.h  visingleton.h  visingletonmanager.h  visizeconverter.h  visonginfo.h  vitimeconverter.h  vitype.h  vitypechecker.h  vitypesizeconverter.h  vivector.h  viwebservicer.h
code/essentials/sources/: viarchive.cpp  viatomicint.cpp  viaverager.cpp  vichunk.cpp  viclassificationerror.cpp  vicommon.cpp  vidifferentiater.cpp  vierror.cpp  vifunctioncall.cpp  vifunctor.cpp  viid.cpp  vijsonresponse.cpp  vilibrary.cpp  vilibrarydetector.cpp  vilibrarymanager.cpp  vilogger.cpp  vimanager.cpp  vimath.cpp  vimatrix.cpp  viname.cpp  vinotifier.cpp  viobject.cpp  vipointer.cpp  vipowercalculator.cpp  virandomgenerator.cpp  virange.cpp  viscaler.cpp  visingleton.cpp  visingletonmanager.cpp  visizeconverter.cpp  visonginfo.cpp  vitimeconverter.cpp  vitype.cpp  vitypechecker.cpp  vitypesizeconverter.cpp  vivector.cpp  viwebservicer.cpp
code/essentials/vilibrary/: vilibrary.h
code/essentials/vilibraryloader/: vilibrary.h
code/essentials/vilogger/: vilibrary.h  vilogger.h
code/essentials/viobject/: viobject.h
code/interface/: CMakeLists.txt
code/interface/vicomposedwidgets/: CMakeLists.txt
code/interface/vigradientcreator/: CMakeLists.txt
code/interface/vimainwindow/: CMakeLists.txt
code/interface/visimplewidgets/: CMakeLists.txt
code/interface/vitheme/: CMakeLists.txt
code/interface/vithemes/: CMakeLists.txt
code/interface/viwidgets/: CMakeLists.txt
code/launcher/: CMakeLists.txt
code/launcher/sources/: vilauncher.cpp
code/main/: CMakeLists.txt
code/main/sources/: main.cpp  vimain.cpp
code/system/: CMakeLists.txt
code/system/viaudioconnection/: CMakeLists.txt
code/system/viaudioengine/: CMakeLists.txt
code/system/viaudioformats/: CMakeLists.txt
(+1313 files in other folders)
