#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(VI_AUDIOENGINE ${ROOT}/viaudioengine)
SET(VI_AUDIOBUFFER ${ROOT}/viaudiobuffer)
SET(VI_AUDIOOBJECT ${ROOT}/viaudioobject)
SET(VI_AUDIOCONNECTIONS ${ROOT}/viaudioconnections)
SET(VI_AUDIOCODER ${ROOT}/viaudiocoder)
SET(VI_FOURIERTRANSFORMER ${ROOT}/vifouriertransformer)
SET(VI_PROCESSINGCHAIN ${ROOT}/viprocessingchain)
SET(VI_SONGIDENTIFIER ${ROOT}/visongidentifier)

#Initiate sub-directories
ADD_SUBDIRECTORY(${VI_AUDIOBUFFER})
ADD_SUBDIRECTORY(${VI_AUDIOOBJECT})
ADD_SUBDIRECTORY(${VI_AUDIOENGINE})
ADD_SUBDIRECTORY(${VI_AUDIOCONNECTIONS})
ADD_SUBDIRECTORY(${VI_AUDIOCODER})
ADD_SUBDIRECTORY(${VI_FOURIERTRANSFORMER})
ADD_SUBDIRECTORY(${VI_PROCESSINGCHAIN})
ADD_SUBDIRECTORY(${VI_SONGIDENTIFIER})
