#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(VI_AUDIOENGINE ${ROOT}/viaudioengine)
SET(VI_AUDIOBUFFER ${ROOT}/viaudiobuffer)
SET(VI_AUDIOOBJECT ${ROOT}/viaudioobject)
SET(VI_AUDIOCONNECTIONS ${ROOT}/viaudioconnections)
SET(VI_AUDIOCODER ${ROOT}/viaudiocoder)
SET(VI_FOURIERTRANSFORMER ${ROOT}/vifouriertransformer)
SET(VI_SONGIDENTIFIER ${ROOT}/visongidentifier)
SET(VI_PROJECT ${ROOT}/viproject)
SET(VI_ALIGNER ${ROOT}/vialigner)
SET(VI_PROCESSOR ${ROOT}/viprocessor)
SET(VI_AUDIORECORDER ${ROOT}/viaudiorecorder)
SET(VI_FUNCTIONS ${ROOT}/vifunctions)
SET(VI_INTERPOLATORS ${ROOT}/viinterpolators)

#Initiate sub-directories
ADD_SUBDIRECTORY(${VI_AUDIOBUFFER})
ADD_SUBDIRECTORY(${VI_AUDIOOBJECT})
ADD_SUBDIRECTORY(${VI_AUDIOENGINE})
ADD_SUBDIRECTORY(${VI_AUDIOCONNECTIONS})
ADD_SUBDIRECTORY(${VI_AUDIOCODER})
ADD_SUBDIRECTORY(${VI_FOURIERTRANSFORMER})
ADD_SUBDIRECTORY(${VI_SONGIDENTIFIER})
ADD_SUBDIRECTORY(${VI_PROJECT})
ADD_SUBDIRECTORY(${VI_ALIGNER})
ADD_SUBDIRECTORY(${VI_PROCESSOR})
ADD_SUBDIRECTORY(${VI_AUDIORECORDER})
ADD_SUBDIRECTORY(${VI_FUNCTIONS})
ADD_SUBDIRECTORY(${VI_INTERPOLATORS})
