#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
ADD_SUBDIRECTORY(${ROOT}/viaudioengine)
ADD_SUBDIRECTORY(${ROOT}/viaudiobuffer)
ADD_SUBDIRECTORY(${ROOT}/viaudioobject)
ADD_SUBDIRECTORY(${ROOT}/viaudioconnections)
ADD_SUBDIRECTORY(${ROOT}/viaudiocoder)
ADD_SUBDIRECTORY(${ROOT}/vifouriertransformer)
ADD_SUBDIRECTORY(${ROOT}/visongidentifier)
ADD_SUBDIRECTORY(${ROOT}/viproject)
ADD_SUBDIRECTORY(${ROOT}/vialigner)
ADD_SUBDIRECTORY(${ROOT}/viprocessor)
ADD_SUBDIRECTORY(${ROOT}/viaudiorecorder)
ADD_SUBDIRECTORY(${ROOT}/viaudioplayer)
ADD_SUBDIRECTORY(${ROOT}/vifunctions)
ADD_SUBDIRECTORY(${ROOT}/viinterpolators)
ADD_SUBDIRECTORY(${ROOT}/vinoisedetector)
ADD_SUBDIRECTORY(${ROOT}/viautoregresser)
ADD_SUBDIRECTORY(${ROOT}/vipredictors)
ADD_SUBDIRECTORY(${ROOT}/vigretl)
ADD_SUBDIRECTORY(${ROOT}/vifann)
ADD_SUBDIRECTORY(${ROOT}/vieigen)
ADD_SUBDIRECTORY(${ROOT}/vipolynomials)
