#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Add C++ macro
ADD_DEFINITIONS(-DNAME="${NAME}")
ADD_DEFINITIONS(-DVERSION_MAJOR="${VERSION_MAJOR}")
ADD_DEFINITIONS(-DVERSION_MINOR="${VERSION_MINOR}")
ADD_DEFINITIONS(-DVERSION_PATCH="${VERSION_PATCH}")
ADD_DEFINITIONS(-DSHORT_DESCRIPTION="${SHORT_DESCRIPTION}")
ADD_DEFINITIONS(-DLONG_DESCRIPTION="${LONG_DESCRIPTION}")
ADD_DEFINITIONS(-DMAINTAINER="${MAINTAINER}")
ADD_DEFINITIONS(-DEMAIL="${EMAIL}")
ADD_DEFINITIONS(-DHOMEPAGE="${HOMEPAGE}")
ADD_DEFINITIONS(-DLICENSE="${LICENSE}")
ADD_DEFINITIONS(-DCOPYRIGHT="${COPYRIGHT}")

#Initiate source files
FILE(GLOB VI_ESSENTIALS_SOURCES ${SOURCES}/*.cpp ${SOURCES}/*/*.cpp)
FILE(GLOB VI_ESSENTIALS_HEADERS_ALL ${HEADERS}/*.h ${HEADERS}/*/*.h)
SET(VI_ESSENTIALS_HEADERS)
SET(VI_ESSENTIALS_MOC_HEADERS)
FOREACH(HEADER ${VI_ESSENTIALS_HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND VI_ESSENTIALS_MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND VI_ESSENTIALS_HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT5_WRAP_CPP(VI_WRAPPER_HEADERS ${VI_ESSENTIALS_MOC_HEADERS})

#Create library
ADD_LIBRARY(viessentials SHARED ${VI_WRAPPER_HEADERS} ${VI_ESSENTIALS_HEADERS} ${VI_ESSENTIALS_SOURCES})
TARGET_LINK_LIBRARIES(viessentials ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES} osdab)

#Install file
INSTALL(TARGETS viessentials DESTINATION essentials)
