#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Add C++ macro
ADD_DEFINITIONS(-DNAME="${NAME}")
ADD_DEFINITIONS(-DVERSION_MAJOR="${VERSION_MAJOR}")
ADD_DEFINITIONS(-DVERSION_MINOR="${VERSION_MINOR}")
ADD_DEFINITIONS(-DVERSION_PATCH="${VERSION_PATCH}")
ADD_DEFINITIONS(-DSHORT_DESCRIPTION="${SHORT_DESCRIPTION}")
ADD_DEFINITIONS(-DLONG_DESCRIPTION="${LONG_DESCRIPTION}")
ADD_DEFINITIONS(-DMAINTAINER="${MAINTAINER}")
ADD_DEFINITIONS(-DEMAIL="${EMAIL}")
ADD_DEFINITIONS(-DHOMEPAGE="${HOMEPAGE}")
ADD_DEFINITIONS(-DLICENSE="${LICENSE}")
ADD_DEFINITIONS(-DCOPYRIGHT="${COPYRIGHT}")

#Initiate source files
FILE(GLOB VI_ESSENTIALS_SOURCES ${SOURCES}/*.cpp ${SOURCES}/*/*.cpp ${SOURCES}/*/*/*.cpp)
FILE(GLOB VI_ESSENTIALS_HEADERS ${HEADERS}/*.h ${HEADERS}/*/*.h ${HEADERS}/*/*/*.h)

#Create library
ADD_LIBRARY(viessentials SHARED ${VI_ESSENTIALS_HEADERS} ${VI_ESSENTIALS_SOURCES})
QT5_USE_MODULES(viessentials Core Gui Widgets Xml Network Multimedia)
TARGET_LINK_LIBRARIES(viessentials osdab)

#Install file
INSTALL(TARGETS viessentials DESTINATION essentials)
