#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(VI_MAINWINDOW ${ROOT}/vimainwindow)
SET(VI_WIDGETS ${ROOT}/viwidgets)
SET(VI_THEMES ${ROOT}/vithemes)
SET(VI_GRADIENTCREATOR ${ROOT}/vigradientcreator)

#Initiate sub-directories
ADD_SUBDIRECTORY(${VI_MAINWINDOW})
ADD_SUBDIRECTORY(${VI_WIDGETS})
ADD_SUBDIRECTORY(${VI_THEMES})
ADD_SUBDIRECTORY(${VI_GRADIENTCREATOR})
