#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(VI_THEME ${ROOT}/vitheme)
SET(VI_GRADIENTCREATOR ${ROOT}/vigradientcreator)
SET(VI_SIMPLEWIDGETS ${ROOT}/visimplewidgets)
SET(VI_COMPOSEDWIDGETS ${ROOT}/vicomposedwidgets)
SET(VI_MAINWINDOW ${ROOT}/vimainwindow)

#Initiate sub-directories
ADD_SUBDIRECTORY(${VI_THEME})
ADD_SUBDIRECTORY(${VI_GRADIENTCREATOR})
ADD_SUBDIRECTORY(${VI_SIMPLEWIDGETS})
ADD_SUBDIRECTORY(${VI_COMPOSEDWIDGETS})
ADD_SUBDIRECTORY(${VI_MAINWINDOW})
