#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(SOURCES ${ROOT}/sources)

#Initiate source files
FILE(GLOB VI_MAIN_SOURCES ${SOURCES}/*.cpp )

#Create executable
ADD_EXECUTABLE(visore ${VI_MAIN_SOURCES})

#Link Visore to Qt
ADD_LIBRARY(libbass SHARED IMPORTED)
SET_TARGET_PROPERTIES(libbass PROPERTIES IMPORTED_LOCATION ${VI_BASS_LIBRARY_INSTALL})
TARGET_LINK_LIBRARIES(visore ${QT_LIBRARIES} viaudioengine libbass)

#Install file
INSTALL(TARGETS visore RUNTIME DESTINATION .)
