#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(VI_AUDIOFORMATS ${ROOT}/viaudioformats)
SET(VI_AUDIOENGINE ${ROOT}/viaudioengine)
SET(VI_AUDIOCONNECTION ${ROOT}/viaudioconnection)

#Initiate sub-directories
ADD_SUBDIRECTORY(${VI_AUDIOFORMATS})
ADD_SUBDIRECTORY(${VI_AUDIOENGINE})
ADD_SUBDIRECTORY(${VI_AUDIOCONNECTION})

