#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Include common headers
INCLUDE_DIRECTORIES(${HEADERS})

#Initiate source files
FILE(GLOB VI_AUDIOBUFFER_SOURCES ${SOURCES}/*.cpp)
FILE(GLOB VI_AUDIOBUFFER_HEADERS_ALL ${HEADERS}/*.h)
SET(VI_AUDIOBUFFER_HEADERS)
SET(VI_AUDIOBUFFER_MOC_HEADERS)
FOREACH(HEADER ${VI_AUDIOBUFFER_HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND VI_AUDIOBUFFER_MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND VI_AUDIOBUFFER_HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT5_WRAP_CPP(VI_WRAPPER_HEADERS ${VI_AUDIOBUFFER_MOC_HEADERS})

#Create library
ADD_LIBRARY(viaudiobuffer SHARED ${VI_AUDIOBUFFER_HEADERS} ${VI_AUDIOBUFFER_SOURCES} ${VI_WRAPPER_HEADERS})
TARGET_LINK_LIBRARIES(viaudiobuffer ${QT_LIBRARIES} viessentials)

#Install file
INSTALL(TARGETS viaudiobuffer DESTINATION engine)
