#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Include common headers
INCLUDE_DIRECTORIES(${FFMPEG_LIBAVCODEC_INCLUDE_DIRS})

#Initiate source files
FILE(GLOB VI_AUDIOCODECS_SOURCES ${SOURCES}/*.cpp)
FILE(GLOB VI_AUDIOCODECS_HEADERS_ALL ${HEADERS}/*.h)
SET(VI_AUDIOCODECS_HEADERS)
SET(VI_AUDIOCODECS_MOC_HEADERS)
FOREACH(HEADER ${VI_AUDIOCODECS_HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND VI_AUDIOCODECS_MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND VI_AUDIOCODECS_HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT4_WRAP_CPP(VI_WRAPPER_HEADERS ${VI_AUDIOCODECS_MOC_HEADERS})

#Create library
ADD_LIBRARY(viaudiocodecs SHARED ${VI_AUDIOCODECS_HEADERS} ${VI_AUDIOCODECS_SOURCES} ${VI_WRAPPER_HEADERS})
TARGET_LINK_LIBRARIES(viaudiocodecs ${QT_QTCORE_LIBRARIES} ${FFMPEG_LIBAVCODEC_LIBRARIES} viaudiobuffer)

#Install file
INSTALL(TARGETS viaudiocodecs DESTINATION engine)
