#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Setup install paths
SET(VI_AUTO_REGRESSER_INSTALL_PATH engine/autoregresser)
SET(VI_MODEL_ORDER_INSTALL_PATH ${VI_AUTO_REGRESSER_INSTALL_PATH}/modelorders)

#Add definitions
ADD_DEFINITIONS(-DAUTO_REGRESSER_PATH="${VI_AUTO_REGRESSER_INSTALL_PATH}")
ADD_DEFINITIONS(-DMODEL_ORDER_PATH="${VI_MODEL_ORDER_INSTALL_PATH}")

#Add sub libraries
SET(VI_MODEL_ORDERS ${ROOT}/vimodelorders)
ADD_SUBDIRECTORY(${VI_MODEL_ORDERS})

#Initiate source files
FILE(GLOB VI_AUTO_REGRESSER_HEADERS ${HEADERS}/*.h)
FILE(GLOB VI_AUTO_REGRESSER_SOURCES ${SOURCES}/*.cpp)

#Create library
ADD_LIBRARY(viautoregresser SHARED ${VI_AUTO_REGRESSER_HEADERS} ${VI_AUTO_REGRESSER_SOURCES})
TARGET_LINK_LIBRARIES(viautoregresser viessentials)
QT5_USE_MODULES(viautoregresser Multimedia Xml)

#Install file
INSTALL(TARGETS viautoregresser DESTINATION ${VI_AUTO_REGRESSER_INSTALL_PATH})
