#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Include common headers
INCLUDE_DIRECTORIES(${HEADERS} ${FFMPEG_INCLUDE_DIRS})

#Initiate source files
FILE(GLOB VI_CODECS_SOURCES ${SOURCES}/*.cpp)
FILE(GLOB VI_CODECS_HEADERS_ALL ${HEADERS}/*.h)
SET(VI_CODECS_HEADERS)
SET(VI_CODECS_MOC_HEADERS)
FOREACH(HEADER ${VI_CODECS_HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND VI_CODECS_MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND VI_CODECS_HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT5_WRAP_CPP(VI_WRAPPER_HEADERS ${VI_CODECS_MOC_HEADERS})

#Create library
ADD_LIBRARY(vicodecs SHARED ${VI_CODECS_HEADERS} ${VI_CODECS_SOURCES} ${VI_WRAPPER_HEADERS})
TARGET_LINK_LIBRARIES(vicodecs ${FFMPEG_LIBRARIES} ${Qt5Core_LABRARIES} viessentials)

#Install file
INSTALL(TARGETS vicodecs DESTINATION engine)
