#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)
SET(FFTREAL_HEADERS ${EXTERNAL}/fftreal/headers)

#Include common headers
INCLUDE_DIRECTORIES(${HEADERS} ${FFTREAL_HEADERS})

#Initiate source files
FILE(GLOB VI_FOURIERTRANSFORMER_SOURCES ${SOURCES}/*.cpp)
FILE(GLOB VI_FOURIERTRANSFORMER_HEADERS_ALL ${HEADERS}/*.h)
SET(VI_FOURIERTRANSFORMER_HEADERS)
SET(VI_FOURIERTRANSFORMER_MOC_HEADERS)
FOREACH(HEADER ${VI_FOURIERTRANSFORMER_HEADERS_ALL})
    FILE(STRINGS "${HEADER}" lines REGEX "Q_OBJECT")
    IF(lines)
        LIST(APPEND VI_FOURIERTRANSFORMER_MOC_HEADERS "${HEADER}")
	ELSE()
		LIST(APPEND VI_FOURIERTRANSFORMER_HEADERS "${HEADER}")
    ENDIF()
ENDFOREACH()

#Wrap Qt files
QT5_WRAP_CPP(VI_WRAPPER_HEADERS ${VI_FOURIERTRANSFORMER_MOC_HEADERS})

#Create library
ADD_LIBRARY(vifouriertransformer SHARED ${VI_FOURIERTRANSFORMER_SOURCES} ${VI_WRAPPER_HEADERS})
TARGET_LINK_LIBRARIES(vifouriertransformer ${QT_QTCORE_LIBRARIES} fftreal)

#Install file
INSTALL(TARGETS vifouriertransformer DESTINATION engine)
