#Setup directory paths
SET(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS ${ROOT}/headers)
SET(SOURCES ${ROOT}/sources)

#Initiate source files
FILE(GLOB VI_GRETL_SOURCES ${SOURCES}/*.cpp)
FILE(GLOB VI_GRETL_HEADERS ${HEADERS}/*.h)

#Create library
INCLUDE_DIRECTORIES(${GRETL_INCLUDE_DIR})
ADD_LIBRARY(vigretl SHARED ${VI_GRETL_HEADERS} ${VI_GRETL_SOURCES})
TARGET_LINK_LIBRARIES(vigretl ${GRETL_LIBRARY})

#Install file
INSTALL(TARGETS vigretl DESTINATION engine)
